# 3D_Sparse_Skeleton

./: README.md
Utils/kdtree/: CMakeLists.txt
polygon_generation/: CMakeLists.txt  package.xml
polygon_generation/include/polygon_generation/: data_type_3D.h  skeleton_finder_3D.h
polygon_generation/include/utils/: A_star.h
polygon_generation/launch/: 3D_skeleton_indoor_corridor.launch  3D_skeleton_large_maze.launch  3D_skeleton_machine_hall.launch  3D_skeleton_multi_floored_hall.launch
polygon_generation/launch/rviz_config/: rviz_config_3D.rviz  rviz_config_3D_hku_indoor.rviz  rviz_config_3D_hku_lib.rviz  rviz_config_3D_machine.rviz  rviz_config_clickmap.rviz
polygon_generation/src/: map_generator.cpp  skeleton_finder_3D.cpp  skeleton_finder_3D_test.cpp
polygon_generation/utils/A_star/: A_star.cpp
polygon_generation/utils/kdtree/: kdtree.c
polygon_generation/utils/quickhull/: HalfEdgeMesh.hpp  QuickHull.cpp
polygon_generation/utils/quickhull/Tests/: CMakeLists.txt  QuickHullTests.cpp
